--- a/JeuxAESD/Base.lproj/LaunchScreen.storyboard
+++ b/JeuxAESD/Base.lproj/LaunchScreen.storyboard
@@ -1,27 +1,59 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="0r6-N9-Kvm">
+    <device id="retina4_0" orientation="landscape">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="EHf-IW-A2E">
+        <scene sceneID="Ldo-bV-ONd">
             <objects>
-                <viewController id="01J-lp-oVM" sceneMemberID="viewController">
+                <viewController id="0r6-N9-Kvm" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Llm-lL-Icb"/>
-                        <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
+                        <viewControllerLayoutGuide type="top" id="awG-1f-IBM"/>
+                        <viewControllerLayoutGuide type="bottom" id="QV6-kE-omz"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <view key="view" contentMode="scaleToFill" id="0bs-5g-dFK">
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-monochrome-256" translatesAutoresizingMaskIntoConstraints="NO" id="4gV-fw-Bc1">
+                                <rect key="frame" x="36" y="36" width="496" height="248"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="4gV-fw-Bc1" secondAttribute="height" multiplier="2:1" id="rwX-is-cif"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright © 2017 Nicolas Gnyra. Tous droits réservés." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q04-jC-JT3">
+                                <rect key="frame" x="16" y="292" width="536" height="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="4gV-fw-Bc1" secondAttribute="trailing" constant="16" id="3kp-Ed-RUh"/>
+                            <constraint firstItem="4gV-fw-Bc1" firstAttribute="centerX" secondItem="0bs-5g-dFK" secondAttribute="centerX" id="HZl-qe-EEB"/>
+                            <constraint firstItem="4gV-fw-Bc1" firstAttribute="centerY" secondItem="0bs-5g-dFK" secondAttribute="centerY" id="K49-Ic-uN5"/>
+                            <constraint firstItem="4gV-fw-Bc1" firstAttribute="top" relation="greaterThanOrEqual" secondItem="awG-1f-IBM" secondAttribute="bottom" constant="16" id="NvT-9V-6Zn"/>
+                            <constraint firstItem="Q04-jC-JT3" firstAttribute="leading" secondItem="0bs-5g-dFK" secondAttribute="leading" constant="16" id="g0G-Nr-feg"/>
+                            <constraint firstItem="QV6-kE-omz" firstAttribute="top" secondItem="Q04-jC-JT3" secondAttribute="bottom" constant="16" id="g9V-kJ-7tN"/>
+                            <constraint firstItem="Q04-jC-JT3" firstAttribute="top" relation="greaterThanOrEqual" secondItem="4gV-fw-Bc1" secondAttribute="bottom" constant="8" id="jSF-Xc-8SL"/>
+                            <constraint firstAttribute="trailing" secondItem="Q04-jC-JT3" secondAttribute="trailing" constant="16" id="oun-eN-ii7"/>
+                            <constraint firstItem="4gV-fw-Bc1" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="0bs-5g-dFK" secondAttribute="leading" constant="16" id="zhB-fS-Dfl"/>
+                        </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hpR-vJ-0MZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="-132.04225352112675" y="-91.875"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo-monochrome-256" width="512" height="256"/>
+    </resources>
 </document>
